--- a/app/src/main/res/layout/sender_layout.xml
+++ b/app/src/main/res/layout/sender_layout.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/sender_profile"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_margin="10dp"
-        android:src="@drawable/no_profile_pic" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:shapeAppearanceOverlay="@style/Circular"
+        android:background="@color/DarkBlue200"/>
 
     <TextView
         android:id="@+id/sender_massage"
