--- a/app/src/main/res/layout/activity_my_posts_on_profile.xml
+++ b/app/src/main/res/layout/activity_my_posts_on_profile.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:background="@color/DarkBlue500"
         android:backgroundTint="@color/DarkBlue400"
-        android:layout_marginBottom="16dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
@@ -33,155 +32,221 @@
             android:layout_marginBottom="10dp"/>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-        <TextView
+        app:cardCornerRadius="2dp"
+        android:layout_margin="5dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="User Name"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:layout_weight="2"/>
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/no_profile_pic"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp">
+            android:orientation="vertical">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="14dp"
+                app:shapeAppearanceOverlay="@style/Circular"
+                android:background="@drawable/no_profile_pic"/>
 
             <TextView
-                android:id="@+id/textView_post_number"
-                android:layout_width="wrap_content"
+                android:id="@+id/postOnProfile_username"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
+                android:text="User Name"
+                android:textSize="17sp"
+                android:textColor="@color/DarkBlue400"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/userAbout"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:text="About user"
+                android:layout_gravity="center"
                 android:layout_marginTop="8dp"
-                android:text="999"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginBottom="8dp"
+                android:textAlignment="center"
+                android:textColor="@color/White400"
+                android:lines="3"/>
 
-            <TextView
-                android:id="@+id/textView_post_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:backgroundTint="@color/White150"
+                android:background="@drawable/blue_bg"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
                 android:layout_marginBottom="5dp"
-                android:text="Posts"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView_post_number"
-                app:layout_constraintStart_toStartOf="@+id/textView_post_number"
-                app:layout_constraintTop_toBottomOf="@+id/textView_post_number" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:orientation="horizontal">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/textView_sell_number"
-                android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/textView_post_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="0"
+                        android:textSize="16sp"
+                        android:textColor="@color/DarkBlue200"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView_post_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:text="Posts"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/textView_post_number"
+                        app:layout_constraintStart_toStartOf="@+id/textView_post_number"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_post_number" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/textView_sell_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="0"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/DarkBlue200"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView_sell_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:text="On Sell"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/textView_sell_number"
+                        app:layout_constraintStart_toStartOf="@+id/textView_sell_number"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_sell_number" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/textView_rent_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="0"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/DarkBlue200"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView_rent_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:text="On Rent"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="@+id/textView_rent_number"
+                        app:layout_constraintStart_toStartOf="@+id/textView_rent_number"
+                        app:layout_constraintTop_toBottomOf="@+id/textView_rent_number" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="999"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView_sell_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="On Sell"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView_sell_number"
-                app:layout_constraintStart_toStartOf="@+id/textView_sell_number"
-                app:layout_constraintTop_toBottomOf="@+id/textView_sell_number" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp">
-
-            <TextView
-                android:id="@+id/textView_rent_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="999"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView_rent_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="On Rent"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView_rent_number"
-                app:layout_constraintStart_toStartOf="@+id/textView_rent_number"
-                app:layout_constraintTop_toBottomOf="@+id/textView_rent_number" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/blue_bg"
-            android:text="See Massages"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Edit Profile"
-            android:background="@drawable/blue_bg"/>
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/see_requests"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/White"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:paddingStart="12dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="10dp"
+                    android:paddingEnd="12dp"
+                    android:backgroundTint="@color/my_light_primary"
+                    android:background="@drawable/blue_bg"
+                    android:text="See Requests"/>
+                <TextView
+                    android:id="@+id/edit_profile"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/my_light_primary"
+                    android:layout_weight="0.2"
+                    android:textAlignment="center"
+                    android:padding="6dp"
+                    android:layout_marginEnd="10dp"
+                    android:backgroundTint="@color/White150"
+                    android:background="@drawable/blue_bg"
+                    android:text="Edit Profile"/>
 
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <ProgressBar
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+
+    <!--<ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone"/>-->
+
+    <ImageView
+        android:id="@+id/no_posts"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:src="@drawable/no_massages"
+        android:layout_marginTop="30dp"
+        android:importantForAccessibility="no" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/profile_posts_rv"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent"
         />
+
 
 
 </LinearLayout>
