--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:padding="5dp"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -11,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="28dp"
         android:orientation="horizontal">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView_profile_dp"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginRight="14dp"
             android:scaleType="centerCrop"
             android:background="@drawable/no_profile_pic"
@@ -28,6 +29,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -46,7 +48,7 @@
                 android:textColor="@color/DarkBlue400"
                 />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,7 +61,7 @@
                 android:layout_marginTop="4dp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:paddingBottom="3dp"/>
+                android:paddingBottom="3dp"/>-->
         </LinearLayout>
 
         <TextView
@@ -75,15 +77,7 @@
             android:text="Logout"
             android:textColor="#BD0202"
             android:textSize="12sp" />
-        <!--<com.google.android.material.button.MaterialButton
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@style/Widget.MaterialComponents.Button"
-            app:cornerRadius="5dp"
-            android:text="Massage"
-            app:strokeColor="@color/Green300"/>-->
+
     </LinearLayout>
 
     <LinearLayout
@@ -96,15 +90,6 @@
         android:backgroundTint="@color/White200"
         />
 
-    <!--<TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Quick Links"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="14dp"
-        />-->
 
 
     <LinearLayout
