--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -9,56 +9,57 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-<!--
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="480dp"
+        android:id="@+id/linearLayout_saved_item"
+        android:layout_width="260dp"
+        android:layout_height="430dp"
         android:layout_gravity="center"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_width="220dp"
+            android:layout_height="210dp"
             android:layout_gravity="center"
             android:src="@drawable/no_favourites"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center"
-            android:layout_marginTop="10dp"
             android:text="No favourites"/>
         <TextView
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="You can add an item to your favourites by clicking “Heart Icon”"
+            android:text="You can add an item to your favourites by clicking “Save Icon"
             android:textAlignment="center"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="2dp"
             android:textColor="@color/White400"
             />
 
         <Button
+            android:id="@+id/save_btn_goBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Go Back"
             android:backgroundTint="#307EF3"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             />
     </LinearLayout>
--->
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/save_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_gravity="center"/>
 
 
