--- a/app/src/main/res/layout/one_post_for_profile.xml
+++ b/app/src/main/res/layout/one_post_for_profile.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="130dp"
     android:layout_height="130dp"
-    android:layout_margin="2dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp"
+    android:elevation="2dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/DarkBlue200"/>
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:background="@color/DarkBlue100"/>
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
