--- a/app/src/main/res/layout/one_saved_item_rv.xml
+++ b/app/src/main/res/layout/one_saved_item_rv.xml
@@ -2,18 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="14dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:background="@color/White"
+    android:layout_marginStart="13dp"
+    android:layout_marginEnd="15dp"
+    android:backgroundTint="@color/White"
+    android:background="@drawable/green_bg_text"
     android:orientation="horizontal">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/save_post_image"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:padding="2dp"
+        android:layout_margin="10dp"
         android:layout_marginEnd="8dp"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/RoundedSquare"
         android:layout_gravity="center"
         android:background="@color/DarkBlue200"/>
     <LinearLayout
@@ -63,6 +68,7 @@
                 android:textColor="@color/DarkBlue500"
                 android:layout_weight="4"
                 android:textStyle="bold"/>
+
             <ImageView
                 android:id="@+id/save_post_delete"
                 android:layout_width="30dp"
