--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -70,6 +70,7 @@
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity="center"
+                    android:scaleType="centerCrop"
                     android:layout_marginBottom="10dp"
                     android:background="@color/DarkBlue300"
                     app:shapeAppearanceOverlay="@style/Circular" />
