--- a/app/src/main/res/layout/login_bottomsheet_helper.xml
+++ b/app/src/main/res/layout/login_bottomsheet_helper.xml
@@ -16,6 +16,7 @@
         android:hint="Email"
         android:layout_marginTop="50dp"
         android:layout_marginStart="30dp"
+        android:textColorHint="@color/DarkBlue200"
         android:layout_marginEnd="30dp"
         android:background="@drawable/blue_bg"
         android:backgroundTint="@color/DarkBlue100"
@@ -45,6 +46,7 @@
             android:layout_weight="3"
             android:hint="Password"
             android:background="@drawable/blue_bg"
+            android:textColorHint="@color/DarkBlue200"
             android:backgroundTint="@color/DarkBlue100"
             android:paddingStart="20dp"
             android:paddingEnd="5dp"
