--- a/app/src/main/res/layout/one_item_each_massages.xml
+++ b/app/src/main/res/layout/one_item_each_massages.xml
@@ -7,8 +7,10 @@
     android:layout_height="wrap_content"
     android:background="@color/White"
     android:backgroundTint="@color/White"
-    app:cardCornerRadius="2dp"
-    android:layout_margin="6dp">
+    app:cardCornerRadius="8dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
