--- a/app/src/main/res/layout/sender_layout.xml
+++ b/app/src/main/res/layout/sender_layout.xml
@@ -10,6 +10,7 @@
         android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:scaleType="centerCrop"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
@@ -30,7 +31,7 @@
         android:background="@drawable/sender_shape"
         android:padding="7dp"
         android:text="Sender"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+        android:textColor="@color/black"/>
+
 
 </RelativeLayout>
